fix: assign default permission group to players that have no explicit permission group assigned (fixes #49)